@@ -1322,6 +1322,7 @@ sp-sodium-and-chlorine=Sodium and chlorine
 sp-sodium-borate=Sodium borate
 sp-sodium-carbonate=Sodium carbonate
 sp-sodium-from-acrovoid=Sodium from acrovoid
+sp-sodium-hydroxide=Sodium hydroxide
 sp-sodium-hydroxide-from-liquid-sodium=Sodium hydroxide from liquid sodium
 sp-sodium-hydroxide-from-salt=Sodium hydroxide from salt
 sp-sodium-hydroxide-from-sodium=Sodium hydroxide from sodium
